[package]
name = "sumire_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serenity = { version = "0.10.9", features=["unstable_discord_api"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.1.9"
diesel = { version = "1.4.6", features = ["postgres", "chrono", "r2d2"] }
chrono = "0.4.19"
rand = "0.8.4"
